--- a/css/styles.css
+++ b/css/styles.css
@@ -3,18 +3,18 @@
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit; }
+  box-sizing: border-box; }
 
 html {
   font-size: 62.5%; }
 
 body {
-  margin: 2rem;
   font-family: 'Lato', sans-serif;
   font-size: 1.5rem;
   font-weight: 400;
   letter-spacing: .1rem;
-  word-spacing: .2rem; }
+  word-spacing: .2rem;
+  color: yellow; }
 
 @keyframes moveInDown {
   0% {
@@ -54,6 +54,21 @@ body {
     transform: translateY(0rem);
     opacity: 1; } }
 
+.paragraph:not(:last-child) {
+  margin-bottom: 3rem; }
+
+.btn-white__sm:link, .btn-white__sm:visited {
+  background: #fff;
+  text-decoration: none;
+  padding: .3rem 1rem .5rem;
+  border-radius: 3rem;
+  color: #007e88; }
+
+.btn-white__sm:hover {
+  cursor: pointer;
+  background: #24e8a7 url("../images/background.jpg") no-repeat 50%/cover;
+  color: #fff; }
+
 .flex {
   display: flex;
   justify-content: space-between; }
@@ -74,9 +89,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%); }
   .headingOnGreen__primary {
-    display: block;
-    text-transform: uppercase;
-    font-size: 3rem; }
+    display: block; }
   .headingOnGreen__sub {
     display: block; }
   .headingOnGreen__btn {
@@ -85,7 +98,7 @@ body {
 .headingOnWhite__primary {
   font-size: 4rem;
   text-transform: uppercase;
-  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8));
+  background-image: linear-gradient(to right, rgba(36, 232, 167, 0.8), rgba(0, 126, 136, 0.8));
   display: inline-block;
   -webkit-background-clip: text;
   color: transparent; }
@@ -96,31 +109,112 @@ body {
 .text-center {
   text-align: center; }
 
+.text-cursive {
+  font-family: 'Satisfy', cursive; }
+
+.text-cinzel {
+  font-family: 'Cinzel', serif;
+  font-weight: 700; }
+
 .section-padding {
   padding: 15rem 2rem 2rem 2rem; }
 
-.margin-top-2 {
+.margin-top-sm {
   margin-top: 2rem; }
 
-.margin-bottom-8 {
+.margin-bottom-sm {
+  margin-bottom: 2rem; }
+
+.margin-bottom-m {
+  margin-bottom: 4rem; }
+
+.margin-bottom-lg {
   margin-bottom: 8rem; }
 
 .header {
-  background: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../images/header-img.jpg");
+  background: #24e8a7 url("../images/background.jpg") no-repeat 50%/cover;
   height: 95vh;
-  background-size: cover;
   background-position: top;
   position: relative;
   color: #fff;
+  padding: 2rem;
   animation: moveInDown .5s ease-out;
   clip-path: polygon(0% 0%, 100% 0, 100% 75vh, 0 100%); }
   .header__logo {
     animation: moveInRight 1.5s ease-out;
     color: #fff;
-    font-size: 2rem;
-    font-family: 'Satisfy', cursive; }
+    font-size: 2rem; }
   .header__ul {
     animation: moveInLeft 1.5s ease-out; }
+
+.image {
+  position: relative;
+  width: 40%;
+  left: 50%;
+  transform: translateX(-50%); }
+  .image__number1 {
+    left: 12.5%;
+    position: absolute;
+    filter: opacity(0.1) drop-shadow(0 0 0 #24e8a7);
+    width: 50%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    transition: all .2s;
+    outline-offset: 2rem; }
+    .image__number1:hover {
+      outline: 1.5rem solid #007e88;
+      transform: scale(1.05); }
+  .image__number2 {
+    right: 12.5%;
+    position: absolute;
+    filter: opacity(0.1) drop-shadow(0 0 0 #24e8a7);
+    width: 50%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    transition: all .2s;
+    outline-offset: 2rem; }
+    .image__number2:hover {
+      outline: 1.5rem solid #007e88;
+      transform: scale(1.05); }
+  .image__number3 {
+    left: 0%;
+    top: 10rem;
+    position: absolute;
+    filter: opacity(0.1) drop-shadow(0 0 0 #24e8a7);
+    width: 50%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    transition: all .2s;
+    outline-offset: 2rem; }
+    .image__number3:hover {
+      outline: 1.5rem solid #007e88;
+      transform: scale(1.05); }
+  .image__number4 {
+    left: 50%;
+    transform: translateX(-50%);
+    top: 10rem;
+    position: absolute;
+    filter: opacity(0.1) drop-shadow(0 0 0 #24e8a7);
+    width: 50%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    transition: all .2s;
+    outline-offset: 2rem; }
+    .image__number4:hover {
+      outline: 1.5rem solid #007e88;
+      transform: scale(1.05); }
+  .image__number5 {
+    right: 0%;
+    top: 10rem;
+    position: absolute;
+    filter: opacity(0.1) drop-shadow(0 0 0 #24e8a7);
+    width: 50%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    transition: all .2s;
+    outline-offset: 2rem; }
+    .image__number5:hover {
+      outline: 1.5rem solid #007e88;
+      transform: scale(1.05); }
+
+@media (max-width: 768px) {
+  .image {
+    width: 100%; } }
 
 .footer {
   animation: moveUp 1s ease-out; }
@@ -146,6 +240,20 @@ body {
     width: calc((100% - 4rem) /2); }
   .row .grid-8 {
     width: calc( 2 * ((100% - 2 * 4rem) /3) + 4rem); }
+
+@media (max-width: 768px) {
+  .row .grid-3 {
+    width: 100%; }
+  .row .grid-4 {
+    width: 100%; }
+  .row .grid-6 {
+    width: 100%; }
+  .row .grid-8 {
+    width: 100%;
+    margin-top: 3rem; } }
+
+.wrapper {
+  padding: 1rem; }
 
 .about {
   margin-top: -20vh;
