--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,9 +1,9 @@
 // COLORS
 $color-white: #fff;
 $color-grey: #f5f5f5;
-$color-main: #7ed56f;
+$color-main: #24e8a7;
 $color-secondary: #55c57a;
-$color-dark: #28b485;
+$color-dark: #007e88;
 
 // GRID VARIABLES
 $grid-width: 114rem;
