--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,16 +3,16 @@
 *::before{
 	margin: 0;
 	padding: 0;
-	box-sizing: inherit;
+	box-sizing: border-box;
 }
 html{
 	font-size: 62.5%;
 }
 body{
-    margin: 2rem;
 	font-family: 'Lato', sans-serif;
 	font-size: 1.5rem;
 	font-weight: 400;
 	letter-spacing: .1rem;
 	word-spacing: .2rem;
+	color: yellow;
 }
