--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -25,8 +25,6 @@
 	transform: translate(-50%, -50%);
 	&__primary{
 	display: block;
-	text-transform: uppercase;
-	font-size: 3rem;
 	}
 	&__sub{
 	display: block;
@@ -56,16 +54,33 @@
 	text-align: center;
 }
 
+.text-cursive{
+	font-family: 'Satisfy', cursive;
+}
+
+.text-cinzel{
+	font-family: 'Cinzel', serif;
+	font-weight: 700;
+}
+
 
 // MARGIN/ PADDING
 .section-padding{
 	padding: 15rem 2rem 2rem 2rem;
 }
 
-.margin-top-2{
+.margin-top-sm{
 	margin-top: 2rem;
 }
 
-.margin-bottom-8{
+.margin-bottom-sm{
+	margin-bottom: 2rem;
+}
+
+.margin-bottom-m{
+	margin-bottom: 4rem;
+}
+
+.margin-bottom-lg{
 	margin-bottom: 8rem;
 }
