--- a/sass/layouts/_grid.scss
+++ b/sass/layouts/_grid.scss
@@ -36,3 +36,20 @@
  
 }
 
+@media (max-width: 768px){
+.row{
+	.grid-3{
+	width: 100%;
+	}
+	.grid-4{
+	width: 100%;
+	}
+	.grid-6{
+	width: 100%;
+	}
+	.grid-8{
+	width: 100%;
+	margin-top: 3rem;
+	}
+}
+}
