--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,12 +1,12 @@
 @import "base/base";
 @import "base/animations";
-@import "base/typography";
-@import "base/utilities";
+@import "base/typo";
 
 @import "abstracts/variables";
 @import "abstracts/functions";
 @import "abstracts/mixins";
 
+@import "components/buttons";
 @import "components/common";
 @import "components/header";
 @import "components/footer";
