complete design and settings -Intro, experience and projects section, minor changes in header section as well

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,12 @@ html {
 
 body {
   font-family: 'Lato', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   font-weight: 400;
   letter-spacing: .1rem;
   word-spacing: .2rem;
-  color: yellow; }
+  color: #333;
+  line-height: 2; }
 
 @keyframes moveInDown {
   0% {
@@ -54,20 +55,60 @@ body {
     transform: translateY(0rem);
     opacity: 1; } }
 
-.paragraph:not(:last-child) {
-  margin-bottom: 3rem; }
-
-.btn-white__sm:link, .btn-white__sm:visited {
-  background: #fff;
+.btn__white--sm:link, .btn__white--sm:visited {
   text-decoration: none;
-  padding: .3rem 1rem .5rem;
+  padding: 0 1rem;
   border-radius: 3rem;
-  color: #007e88; }
+  font-weight: 700;
+  display: inline-block;
+  background: #fff;
+  color: #8a8a8a; }
 
-.btn-white__sm:hover {
-  cursor: pointer;
-  background: #24e8a7 url("../images/background.jpg") no-repeat 50%/cover;
+.btn__white--sm:hover {
+  background: linear-gradient(to right bottom, rgba(140, 67, 255, 0.9), rgba(138, 138, 138, 0.9)), url("../images/header-image1.png") no-repeat 50%/cover;
+  background-attachment: fixed;
+  background-position: center;
   color: #fff; }
+
+.btn__blue--sm:link, .btn__blue--sm:visited {
+  text-decoration: none;
+  padding: 0 1rem;
+  border-radius: 3rem;
+  font-weight: 700;
+  display: inline-block;
+  border-left: 2px solid #8461bd;
+  border-radius: inherit; }
+
+.btn__blue--sm:hover {
+  background: transparent;
+  border-bottom: 2px solid #8461bd;
+  color: #8461bd;
+  border-radius: inherit;
+  transition: all .2s ease; }
+
+.cards {
+  perspective: 120rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 50rem; }
+  .cards__side {
+    height: 50rem;
+    transition: all .8s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+    box-shadow: 0 1.5rem 4rem rgba(138, 138, 138, 0.4); }
+    .cards__side--front {
+      background: #fff; }
+    .cards__side--back {
+      background-image: linear-gradient(to right bottom, #7ed567, #28b485);
+      transform: rotateY(180deg); }
+  .cards:hover .cards__side--front {
+    transform: rotateY(-180deg); }
+  .cards:hover .cards__side--back {
+    transform: rotateY(0); }
 
 .flex {
   display: flex;
@@ -83,41 +124,119 @@ body {
     padding: 0 1rem;
     text-decoration: none; }
 
-.headingOnGreen {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%); }
-  .headingOnGreen__primary {
-    display: block; }
-  .headingOnGreen__sub {
-    display: block; }
-  .headingOnGreen__btn {
-    display: block; }
+.header {
+  background: linear-gradient(to right bottom, rgba(140, 67, 255, 0.9), rgba(138, 138, 138, 0.9)), url("../images/header-background.jpg") no-repeat 50%/cover;
+  background-attachment: fixed;
+  background-position: left;
+  height: 95vh;
+  position: relative;
+  color: #fff;
+  padding: 1rem;
+  animation: moveInDown .5s ease-out;
+  -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 85vh, 0 100%);
+  clip-path: polygon(0% 0%, 100% 0, 100% 85vh, 0 100%); }
+  .header__logo {
+    animation: moveInRight 1.5s ease-out;
+    color: #fff;
+    font-size: 2rem; }
+  .header__ul {
+    animation: moveInLeft 1.5s ease-out; }
+  .header__image {
+    position: absolute;
+    width: 40%;
+    left: 50%;
+    transform: translateX(-50%); }
+    .header__image--number1 {
+      left: 12.5%;
+      padding: 1rem;
+      position: absolute;
+      width: 50%;
+      box-shadow: 0 1.5rem 4rem rgba(245, 245, 245, 0.4);
+      transition: all .2s;
+      outline-offset: 2rem; }
+      .header__image--number1:hover {
+        outline: 1.5rem solid #8461bd;
+        transform: scale(1.05);
+        z-index: 20; }
+    .header__image--number2 {
+      right: 12.5%;
+      top: 3rem;
+      padding: 1rem;
+      position: absolute;
+      width: 50%;
+      box-shadow: 0 1.5rem 4rem rgba(245, 245, 245, 0.4);
+      transition: all .2s;
+      outline-offset: 2rem; }
+      .header__image--number2:hover {
+        outline: 1.5rem solid #8461bd;
+        transform: scale(1.05);
+        z-index: 20; }
+    .header__image--number3 {
+      right: 25%;
+      top: 8rem;
+      padding: 1rem;
+      position: absolute;
+      width: 50%;
+      box-shadow: 0 1.5rem 4rem rgba(245, 245, 245, 0.4);
+      transition: all .2s;
+      outline-offset: 2rem; }
+      .header__image--number3:hover {
+        outline: 1.5rem solid #8461bd;
+        transform: scale(1.05);
+        z-index: 20; }
+    .header__image--number4 {
+      left: 25%;
+      top: 14rem;
+      padding: 1rem;
+      position: absolute;
+      width: 50%;
+      box-shadow: 0 1.5rem 4rem rgba(245, 245, 245, 0.4);
+      transition: all .2s;
+      outline-offset: 2rem; }
+      .header__image--number4:hover {
+        outline: 1.5rem solid #8461bd;
+        transform: scale(1.05);
+        z-index: 20; }
+  .header__heading {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+    .header__heading__primary {
+      display: block;
+      line-height: 1.3; }
+    .header__heading__sub {
+      display: block; }
+    .header__heading__btn {
+      display: inline-block; }
 
-.headingOnWhite__primary {
-  font-size: 4rem;
-  text-transform: uppercase;
-  background-image: linear-gradient(to right, rgba(36, 232, 167, 0.8), rgba(0, 126, 136, 0.8));
-  display: inline-block;
-  -webkit-background-clip: text;
-  color: transparent; }
-
-.headingOnWhite__sub {
-  display: block; }
-
-.text-center {
-  text-align: center; }
-
-.text-cursive {
-  font-family: 'Satisfy', cursive; }
-
-.text-cinzel {
-  font-family: 'Cinzel', serif;
-  font-weight: 700; }
+.composition {
+  position: relative; }
+  .composition__image {
+    width: 60%;
+    position: absolute;
+    box-shadow: 0 1.5rem 4rem rgba(138, 138, 138, 0.4);
+    transition: all .2s;
+    outline-offset: 2rem; }
+    .composition__image:hover {
+      outline: 1.5rem solid #8461bd;
+      transform: scale(1.05);
+      z-index: 20; }
+    .composition__image--number1 {
+      left: 0%;
+      top: 0%; }
+    .composition__image--number2 {
+      right: 0%;
+      top: 3rem; }
+    .composition__image--number3 {
+      left: 20%;
+      top: 8rem; }
+    .composition__image--number4 {
+      left: 25%;
+      top: 14rem; }
 
 .section-padding {
-  padding: 15rem 2rem 2rem 2rem; }
+  padding: 12rem 2rem 12rem 2rem; }
 
 .margin-top-sm {
   margin-top: 2rem; }
@@ -131,93 +250,50 @@ body {
 .margin-bottom-lg {
   margin-bottom: 8rem; }
 
-.header {
-  background: #24e8a7 url("../images/background.jpg") no-repeat 50%/cover;
-  height: 95vh;
-  background-position: top;
-  position: relative;
-  color: #fff;
-  padding: 2rem;
-  animation: moveInDown .5s ease-out;
-  clip-path: polygon(0% 0%, 100% 0, 100% 75vh, 0 100%); }
-  .header__logo {
-    animation: moveInRight 1.5s ease-out;
-    color: #fff;
-    font-size: 2rem; }
-  .header__ul {
-    animation: moveInLeft 1.5s ease-out; }
-
-.image {
-  position: relative;
-  width: 40%;
-  left: 50%;
-  transform: translateX(-50%); }
-  .image__number1 {
-    left: 12.5%;
-    position: absolute;
-    filter: opacity(0.1) drop-shadow(0 0 0 #24e8a7);
-    width: 50%;
-    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
-    transition: all .2s;
-    outline-offset: 2rem; }
-    .image__number1:hover {
-      outline: 1.5rem solid #007e88;
-      transform: scale(1.05); }
-  .image__number2 {
-    right: 12.5%;
-    position: absolute;
-    filter: opacity(0.1) drop-shadow(0 0 0 #24e8a7);
-    width: 50%;
-    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
-    transition: all .2s;
-    outline-offset: 2rem; }
-    .image__number2:hover {
-      outline: 1.5rem solid #007e88;
-      transform: scale(1.05); }
-  .image__number3 {
-    left: 0%;
-    top: 10rem;
-    position: absolute;
-    filter: opacity(0.1) drop-shadow(0 0 0 #24e8a7);
-    width: 50%;
-    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
-    transition: all .2s;
-    outline-offset: 2rem; }
-    .image__number3:hover {
-      outline: 1.5rem solid #007e88;
-      transform: scale(1.05); }
-  .image__number4 {
-    left: 50%;
-    transform: translateX(-50%);
-    top: 10rem;
-    position: absolute;
-    filter: opacity(0.1) drop-shadow(0 0 0 #24e8a7);
-    width: 50%;
-    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
-    transition: all .2s;
-    outline-offset: 2rem; }
-    .image__number4:hover {
-      outline: 1.5rem solid #007e88;
-      transform: scale(1.05); }
-  .image__number5 {
-    right: 0%;
-    top: 10rem;
-    position: absolute;
-    filter: opacity(0.1) drop-shadow(0 0 0 #24e8a7);
-    width: 50%;
-    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
-    transition: all .2s;
-    outline-offset: 2rem; }
-    .image__number5:hover {
-      outline: 1.5rem solid #007e88;
-      transform: scale(1.05); }
-
-@media (max-width: 768px) {
-  .image {
-    width: 100%; } }
+.paragraph:not(:last-child) {
+  margin-bottom: 3rem; }
 
 .footer {
   animation: moveUp 1s ease-out; }
+
+.heading__onWhite--main {
+  font-size: 4rem;
+  text-transform: uppercase;
+  display: inline-block;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-image: linear-gradient(to left, rgba(140, 67, 255, 0.8), rgba(132, 97, 189, 0.8)); }
+
+.heading__onWhite--sub {
+  display: block; }
+
+.heading__onBlue--main {
+  font-size: 4rem;
+  text-transform: uppercase;
+  display: inline-block;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-image: linear-gradient(to left, rgba(255, 255, 255, 0.8), rgba(245, 245, 245, 0.8)); }
+
+.text-center {
+  text-align: center; }
+
+.text-cursive {
+  font-family: 'Satisfy', cursive; }
+
+.text-cinzel {
+  font-family: 'Cinzel', serif;
+  font-weight: 700; }
+
+.opacity {
+  opacity: .7; }
+
+@media (max-width: 1024px) {
+  .sm-device-text-center {
+    text-align: center; }
+  .sm-device-flex-center {
+    display: flex;
+    justify-content: center; } }
 
 .row {
   max-width: 114rem;
@@ -240,21 +316,59 @@ body {
     width: calc((100% - 4rem) /2); }
   .row .grid-8 {
     width: calc( 2 * ((100% - 2 * 4rem) /3) + 4rem); }
-
-@media (max-width: 768px) {
-  .row .grid-3 {
+  .row .grid-12 {
     width: 100%; }
-  .row .grid-4 {
-    width: 100%; }
-  .row .grid-6 {
-    width: 100%; }
-  .row .grid-8 {
-    width: 100%;
-    margin-top: 3rem; } }
 
 .wrapper {
   padding: 1rem; }
 
 .about {
-  margin-top: -20vh;
-  background: #f5f5f5; }
+  margin-top: -10vh; }
+
+.experience {
+  transform: skewY(-2deg);
+  margin-top: -3rem;
+  background: linear-gradient(to right bottom, rgba(140, 67, 255, 0.9), rgba(255, 255, 255, 0.9)), url("../images/header-image1.png") no-repeat 50%/cover;
+  background-attachment: fixed;
+  background-position: center;
+  color: #fff; }
+  .experience > * {
+    transform: skewY(2deg); }
+
+.projects {
+  text-align: center;
+  transform: skewY(-2deg); }
+  .projects > * {
+    transform: skewY(2deg); }
+
+.projects-wrap {
+  display: inline-flex;
+  flex-wrap: wrap; }
+  .projects-wrap__fig {
+    position: relative;
+    max-width: 35rem;
+    margin: 0 auto; }
+    .projects-wrap__fig img {
+      width: 100%;
+      border-radius: .5rem;
+      transition: all .8s;
+      transform: scale(0.9); }
+  .projects-wrap__caption {
+    position: absolute;
+    top: 36%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    opacity: 0;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: all .8s;
+    backface-visibility: hidden; }
+  .projects-wrap:hover .projects-wrap__caption {
+    opacity: 1; }
+  .projects-wrap:hover img {
+    transform: scale(1.1);
+    text-align: center;
+    z-index: 100;
+    transform: scale(1.1);
+    filter: blur(1px) brightness(80%); }
