--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,9 +1,12 @@
 // COLORS
 $color-white: #fff;
+$color-black: #8a8a8a;
 $color-grey: #f5f5f5;
-$color-main: #24e8a7;
+$color-main: #8c43ff;
 $color-secondary: #55c57a;
-$color-dark: #007e88;
+$color-dark: #8461bd;
+$card-color-main: #7ed567;
+$card-color-secondary: #28b485;
 
 // GRID VARIABLES
 $grid-width: 114rem;
