--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,9 +10,10 @@ html{
 }
 body{
 	font-family: 'Lato', sans-serif;
-	font-size: 1.5rem;
+	font-size: 1.6rem;
 	font-weight: 400;
 	letter-spacing: .1rem;
 	word-spacing: .2rem;
-	color: yellow;
+	color: #333;
+	line-height: 2;
 }
