--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,74 +1,91 @@
 .header{
-	background: #24e8a7
-	url("../images/background.jpg") no-repeat 50%/cover;
-	height: 95vh;
-	background-position: top;
+	background: linear-gradient(
+    to right bottom, 
+    rgba($color-main, 0.9), 
+    rgba($color-black, 0.9)),
+	url("../images/header-background.jpg") no-repeat 50%/cover;
+	background-attachment: fixed;
+    background-position: left;
+    height: 95vh;
 	position: relative;
 	color: $color-white;
-	padding: $padding-lg;
+	padding: $padding-sm;
 
     animation: moveInDown .5s ease-out;
-	clip-path: polygon(0% 0%, 100% 0, 100% 75vh, 0 100%);
-
+    -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 85vh, 0 100%);
+	clip-path: polygon(0% 0%, 100% 0, 100% 85vh, 0 100%);
+    // LOGO
 	&__logo{
     animation: moveInRight 1.5s ease-out;
     color: $color-white;
     font-size: 2rem;
 	}
-
+    // LOGO
 	&__ul{
 	animation: moveInLeft 1.5s ease-out;
 	}
-}
-
-.image{
-	position: relative;
+    // IMAGES
+	&__image{
+	position: absolute;
 	width: 40%;
 	left: 50%;
 	transform: translateX(-50%);
-    
+
+    // MIXIN FOR HEADER IMAGE
+
     @mixin filterImage{
+    padding: 1rem;
     position: absolute;
-    filter: opacity(.1) drop-shadow(0 0 0 #24e8a7);
     width: 50%;
-    box-shadow: 0 1.5rem 4rem rgba(black, 0.4);
+    box-shadow: 0 1.5rem 4rem rgba($color-grey, 0.4);
     transition: all .2s;
     outline-offset: 2rem;
     &:hover{
     outline: 1.5rem solid $color-dark;
     transform: scale(1.05);
+    z-index: 20;
     }
     }
-	&__number1{
+	&--number1{
     left: 12.5%;
     @include filterImage;
 	}
-	&__number2{
+	&--number2{
 	right: 12.5%;
+	top: 3rem;
 	@include filterImage;
 	}
-	&__number3{
-	left: 0%;
-	top: 10rem;
+	&--number3{
+	right: 25%;
+	top: 8rem;
 	@include filterImage;
 	}
-	&__number4{
+	&--number4{
+	left: 25%;
+	top: 14rem;
+	@include filterImage;
+	}
+	}
+    // TYPO
+    &__heading{
+    position: absolute;
+	top: 70%;
 	left: 50%;
-	transform: translateX(-50%);
-	top: 10rem;
-	@include filterImage;
+	transform: translate(-50%, -50%);
+	&__primary{
+	display: block;
+	line-height: 1.3;
 	}
-	&__number5{
-	right: 0%;
-	top: 10rem;
-	@include filterImage;
+	&__sub{
+	display: block;
 	}
-	}
-
-@media (max-width: 768px){
-	.image{
-	width: 100%;
-    &__number1{
-    }
+	&__btn{
+	display: inline-block;
 	}
 }
+}
+
+
+
+
+
