--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -5,3 +5,38 @@
 	clear: both;
 	}
 }
+
+// MEDIA QUERY
+
+/*
+0 - 600 = phone
+600-900 = tablet portrait
+900 - 1200 = tablet landscape
+1200 - 1800 = desktop // with the normal styles
+more than 1800 =  Big Desktop
+*/ 
+
+
+/*
+- phone
+- ipad
+- ipad-pro
+- big-desktop
+*/
+@mixin device($breakpoint){
+	@if $breakpoint == phone {
+	  @media (max-width: 37.5em) {@content};
+	}
+	@if $breakpoint == ipad {
+	  @media (max-width: 48em) {@content};
+	}
+	@if $breakpoint == tab-landscape {
+	  @media (max-width: 56.25em) {@content};
+	}
+	@if $breakpoint == ipad-pro {
+	  @media (max-width: 64em) {@content};
+	}
+	@if $breakpoint == big-desk {
+	  @media (min-width: 112.5em) {@content};
+	}
+}
