--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -9,7 +9,6 @@
     height: 95vh;
 	position: relative;
 	color: $color-white;
-	padding: $padding-sm;
 
     animation: moveInDown .5s ease-out;
     -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 85vh, 0 100%);
@@ -19,16 +18,14 @@
     animation: moveInRight 1.5s ease-out;
     color: $color-white;
     font-size: 2rem;
-	}
-    // LOGO
-	&__ul{
-	animation: moveInLeft 1.5s ease-out;
+    padding: 3rem;
 	}
     // IMAGES
 	&__image{
 	position: absolute;
-	width: 40%;
+	width: 50%;
 	left: 50%;
+	top: 20vh;
 	transform: translateX(-50%);
 
     // MIXIN FOR HEADER IMAGE
@@ -36,40 +33,32 @@
     @mixin filterImage{
     padding: 1rem;
     position: absolute;
-    width: 50%;
     box-shadow: 0 1.5rem 4rem rgba($color-grey, 0.4);
     transition: all .2s;
     outline-offset: 2rem;
     &:hover{
     outline: 1.5rem solid $color-dark;
-    transform: scale(1.05);
+    transform: scale(1.6);
     z-index: 20;
     }
     }
 	&--number1{
-    left: 12.5%;
+    left: 0%;
+    top: -3rem;
+    width: 50%;
     @include filterImage;
 	}
 	&--number2{
-	right: 12.5%;
-	top: 3rem;
-	@include filterImage;
-	}
-	&--number3{
-	right: 25%;
-	top: 8rem;
-	@include filterImage;
-	}
-	&--number4{
-	left: 25%;
-	top: 14rem;
+	left: 15.5%;
+    top: 4rem;
+    width: 64%;
 	@include filterImage;
 	}
 	}
     // TYPO
     &__heading{
     position: absolute;
-	top: 70%;
+	top: 75vh;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	&__primary{
@@ -87,5 +76,56 @@
 
 
 
+@include device(tab-landscape){
+	.header__image--number1{
+     width: 52%;
+	}
+	.header__image--number2{
+     width: 72%;
+	}
+}
+
+@include device(ipad-pro){
+	.header{
+	height: 75vh;
+	clip-path: polygon(0% 0%, 100% 0, 100% 65vh, 0 100%);
+	&__image--number1{
+    width: 75%
+	}
+	&__image--number2{
+    width: 112%;
+	}
+	&__heading{
+	top: 59vh;
+	}
+	}
+}
+
+@include device(ipad){
+	.header{
+	&__image--number1{
+     width: 74%;
+     }
+	&__image--number2{
+     width: 100%;
+	}
+	&__heading{
+	top: 57vh;
+	}
+	}
+}
+
+@include device(phone){
+	.header{
+	&__image--number1{
+     width: 86%;
+     left: -5rem;
+     top: -1rem;
+     }
+	&__image--number2{
+     width: 112%;
+	}
+	}
+}
 
 
