--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,9 +1,9 @@
+@import "abstracts/mixins";
 @import "base/base";
 @import "base/animations";
 
 @import "abstracts/variables";
 @import "abstracts/functions";
-@import "abstracts/mixins";
 
 @import "components/buttons";
 @import "components/cards";
@@ -15,5 +15,6 @@
 @import "components/typo";
 
 @import "layouts/grid";
+@import "layouts/navigation";
 
 @import "pages/home";
