--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -17,18 +17,19 @@
 
     &--front{
     background: $color-white;
+    color: $color-main;
     }
 
     &--back{
     background-image: linear-gradient(to right bottom, 
 	rgba($card-color-main, 1), 
 	rgba($card-color-secondary, 1));
-    transform: rotateY(180deg);
+    transform: rotateY(-180deg);
     }
     }
 	
 	&:hover &__side--front{
-    transform: rotateY(-180deg);
+    transform: rotateY(180deg);
     }
 
     &:hover &__side--back{
