--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,9 +2,9 @@
 $color-white: #fff;
 $color-black: #8a8a8a;
 $color-grey: #f5f5f5;
-$color-main: #8c43ff;
+$color-main: #65ccb9;
 $color-secondary: #55c57a;
-$color-dark: #8461bd;
+$color-dark: #182627;
 $card-color-main: #7ed567;
 $card-color-secondary: #28b485;
 
