--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ more than 1800 =  Big Desktop
 
 html {
   font-size: 62.5%; }
-  @media (max-width: 37.5em) {
+  @media (max-width: 658px) {
     html {
       font-size: 50%; } }
 
@@ -62,7 +62,7 @@ body {
   color: #8a8a8a; }
 
 .btn__white--sm:hover {
-  background: linear-gradient(to right bottom, rgba(140, 67, 255, 0.9), rgba(138, 138, 138, 0.9)), url("../images/header-image1.png") no-repeat 50%/cover;
+  background: linear-gradient(to right bottom, rgba(101, 204, 185, 0.9), rgba(138, 138, 138, 0.9)), url("../images/header-image1.png") no-repeat 50%/cover;
   background-attachment: fixed;
   background-position: center;
   color: #fff; }
@@ -73,24 +73,24 @@ body {
   border-radius: 3rem;
   font-weight: 700;
   display: inline-block;
-  border-left: 2px solid #8461bd;
+  border-left: 2px solid #182627;
   border-radius: inherit; }
 
 .btn__blue--sm:hover {
   background: transparent;
-  border-bottom: 2px solid #8461bd;
-  color: #8461bd;
+  border-bottom: 2px solid #182627;
+  color: #182627;
   border-radius: inherit;
   transition: all .2s ease; }
 
 .cards {
   perspective: 120rem;
-  -moz-perspective: 150rem;
+  -moz-perspective: 120rem;
+  -webkit-perspective: 120rem;
   position: relative;
-  height: 50rem;
-  margin: 1rem; }
+  height: 40rem; }
   .cards__side {
-    height: 50rem;
+    height: 39rem;
     transition: all .8s ease;
     position: absolute;
     top: 0;
@@ -100,14 +100,18 @@ body {
     box-shadow: 0 1.5rem 4rem rgba(138, 138, 138, 0.4); }
     .cards__side--front {
       background: #fff;
-      color: #8c43ff; }
+      color: #65ccb9; }
     .cards__side--back {
-      background-image: linear-gradient(to right bottom, #7ed567, #28b485);
-      transform: rotateY(-180deg); }
+      background-image: linear-gradient(to right, #65ccb9, #182627);
+      transform: rotateY(180deg); }
   .cards:hover .cards__side--front {
-    transform: rotateY(180deg); }
+    transform: rotateY(-180deg); }
   .cards:hover .cards__side--back {
     transform: rotateY(0); }
+
+@media (max-width: 48em) {
+  .cards {
+    margin: 1rem; } }
 
 .flex {
   display: flex;
@@ -124,7 +128,7 @@ body {
     text-decoration: none; }
 
 .header {
-  background: linear-gradient(to right bottom, rgba(140, 67, 255, 0.9), rgba(138, 138, 138, 0.9)), url("../images/header-background.jpg") no-repeat 50%/cover;
+  background: linear-gradient(to right bottom, rgba(101, 204, 185, 0.9), rgba(24, 38, 39, 0.9)), url("../images/header-background.jpg") no-repeat 50%/cover;
   background-attachment: fixed;
   background-position: left;
   height: 95vh;
@@ -137,44 +141,33 @@ body {
     animation: moveInRight 1.5s ease-out;
     color: #fff;
     font-size: 2rem;
-    padding: 3rem; }
+    padding: 2rem; }
   .header__image {
+    width: 25%;
     position: absolute;
-    width: 50%;
-    left: 50%;
-    top: 20vh;
-    transform: translateX(-50%); }
+    box-shadow: 0 1.5rem 4rem rgba(138, 138, 138, 0.4);
+    transition: all .2s;
+    outline-offset: 2rem; }
+    .header__image:hover {
+      outline: 1.5rem solid #182627;
+      transform: scale(1.05);
+      z-index: 20; }
     .header__image--number1 {
-      left: 0%;
-      top: -3rem;
-      width: 50%;
-      padding: 1rem;
-      position: absolute;
-      box-shadow: 0 1.5rem 4rem rgba(245, 245, 245, 0.4);
-      transition: all .2s;
-      outline-offset: 2rem; }
-      .header__image--number1:hover {
-        outline: 1.5rem solid #8461bd;
-        transform: scale(1.6);
-        z-index: 20; }
+      left: 17%;
+      top: 18rem; }
     .header__image--number2 {
-      left: 15.5%;
-      top: 4rem;
-      width: 64%;
-      padding: 1rem;
-      position: absolute;
-      box-shadow: 0 1.5rem 4rem rgba(245, 245, 245, 0.4);
-      transition: all .2s;
-      outline-offset: 2rem; }
-      .header__image--number2:hover {
-        outline: 1.5rem solid #8461bd;
-        transform: scale(1.6);
-        z-index: 20; }
+      left: 36%;
+      top: 10rem; }
+    .header__image--number3 {
+      left: 53%;
+      top: 20rem; }
   .header__heading {
+    display: table;
+    padding: 0rem 2rem;
     position: absolute;
-    top: 75vh;
+    top: 67vh;
     left: 50%;
-    transform: translate(-50%, -50%); }
+    transform: translateX(-50%); }
     .header__heading__primary {
       display: block;
       line-height: 1.3; }
@@ -183,63 +176,69 @@ body {
     .header__heading__btn {
       display: inline-block; }
 
-@media (max-width: 56.25em) {
-  .header__image--number1 {
-    width: 52%; }
-  .header__image--number2 {
-    width: 72%; } }
-
 @media (max-width: 64em) {
-  .header {
-    height: 75vh;
-    clip-path: polygon(0% 0%, 100% 0, 100% 65vh, 0 100%); }
-    .header__image--number1 {
-      width: 75%; }
-    .header__image--number2 {
-      width: 112%; }
-    .header__heading {
-      top: 59vh; } }
+  .header__heading {
+    top: 64vh; } }
+
+@media (max-width: 56.25em) {
+  .header__image {
+    width: 27%; } }
 
 @media (max-width: 48em) {
-  .header__image--number1 {
-    width: 74%; }
-  .header__image--number2 {
-    width: 100%; }
+  .header__image--number3 {
+    left: 54%;
+    top: 18rem; }
   .header__heading {
-    top: 57vh; } }
+    top: 58vh; } }
 
-@media (max-width: 37.5em) {
+@media (max-width: 658px) {
+  .header__image {
+    width: 34%; }
   .header__image--number1 {
-    width: 86%;
-    left: -5rem;
-    top: -1rem; }
+    left: 10%;
+    top: 19rem; }
   .header__image--number2 {
-    width: 112%; } }
+    left: 31%;
+    top: 10rem; }
+  .header__image--number3 {
+    left: 54%;
+    top: 19rem; }
+  .header__heading {
+    top: 56vh; } }
+
+@media (max-width: 33.75em) {
+  .header__image {
+    width: 39%; }
+  .header__image--number1 {
+    top: 26rem; }
+  .header__image--number2 {
+    top: 19rem; }
+  .header__image--number3 {
+    top: 26rem; }
+  .header__heading {
+    top: 63vh; } }
 
 .composition {
   position: relative; }
   .composition__image {
-    width: 50%;
+    width: 44%;
     position: absolute;
     box-shadow: 0 1.5rem 4rem rgba(138, 138, 138, 0.4);
     transition: all .2s;
     outline-offset: 2rem; }
     .composition__image:hover {
-      outline: 1.5rem solid #8461bd;
+      outline: 1.5rem solid #182627;
       transform: scale(1.05);
       z-index: 20; }
     .composition__image--number1 {
       left: 0%;
-      top: 0%; }
-    .composition__image--number2 {
-      right: 0%;
-      top: 3rem; }
-    .composition__image--number3 {
-      left: 20%;
       top: 8rem; }
-    .composition__image--number4 {
-      left: 25%;
-      top: 14rem; }
+    .composition__image--number2 {
+      left: 24%;
+      top: 2rem; }
+    .composition__image--number3 {
+      left: 51%;
+      top: 8rem; }
 
 .section-padding {
   padding: 12rem 2rem 12rem 2rem; }
@@ -268,7 +267,7 @@ body {
   display: inline-block;
   -webkit-background-clip: text;
   color: transparent;
-  background-image: linear-gradient(to left, rgba(140, 67, 255, 0.8), rgba(132, 97, 189, 0.8)); }
+  background-image: linear-gradient(to left, rgba(101, 204, 185, 0.8), rgba(24, 38, 39, 0.8)); }
 
 .heading__onWhite--sub {
   display: block; }
@@ -336,7 +335,7 @@ body {
   background-color: #fff;
   border-radius: 50%;
   z-index: 200;
-  box-shadow: 0 1rem 3rem rgba(132, 97, 189, 0.2);
+  box-shadow: 0 1rem 3rem rgba(24, 38, 39, 0.2);
   text-align: center; }
 
 .navigation__background {
@@ -347,7 +346,7 @@ body {
   top: 2rem;
   right: 2rem;
   z-index: 100;
-  background-image: linear-gradient(to left, rgba(140, 67, 255, 0.9), rgba(132, 97, 189, 0.9));
+  background-image: linear-gradient(to left, rgba(101, 204, 185, 0.9), rgba(24, 38, 39, 0.9));
   transition: transform 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045); }
 
 .navigation__nav {
@@ -376,9 +375,9 @@ body {
   font-weight: 700;
   padding: 1rem 2rem;
   font-size: 2rem;
-  color: #8461bd;
+  color: #182627;
   text-decoration: none;
-  background-image: linear-gradient(120deg, #fff 0%, #fff 50%, #8461bd 50%);
+  background-image: linear-gradient(120deg, #fff 0%, #fff 50%, #182627 50%);
   background-size: 250%;
   transition: all .4s; }
 
@@ -401,7 +400,7 @@ body {
     width: 3rem;
     height: 2px;
     display: inline-block;
-    background-color: #8461bd; }
+    background-color: #182627; }
   .navigation__icon::before, .navigation__icon::after {
     content: "";
     position: absolute;
@@ -434,7 +433,7 @@ body {
 .experience {
   transform: skewY(-2deg);
   margin-top: -3rem;
-  background: linear-gradient(to right bottom, rgba(140, 67, 255, 0.9), rgba(255, 255, 255, 0.9)), url("../images/header-image1.png") no-repeat 50%/cover;
+  background: linear-gradient(to right bottom, rgba(85, 197, 122, 0.9), rgba(24, 38, 39, 0.9)), url("../images/header-image1.png") no-repeat 50%/cover;
   background-attachment: fixed;
   background-position: center;
   color: #fff; }
@@ -484,7 +483,7 @@ body {
 .footer {
   background: #8a8a8a; }
 
-@media (max-width: 37.5em) {
+@media (max-width: 658px) {
   .about__composition {
     height: 23rem; } }
 
