--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -1,12 +1,12 @@
 .cards{
 	perspective: 120rem;
-   -moz-perspective: 150rem;
+   -moz-perspective: 120rem;
+   -webkit-perspective: 120rem;
 	position: relative;
-	height: 50rem;
-    margin: 1rem;
+	height: 40rem;
     
     &__side{
-    height: 50rem;
+    height: 39rem;
     transition: all .8s ease;
     position: absolute;
     top: 0;
@@ -21,18 +21,26 @@
     }
 
     &--back{
-    background-image: linear-gradient(to right bottom, 
-	rgba($card-color-main, 1), 
-	rgba($card-color-secondary, 1));
-    transform: rotateY(-180deg);
+    background-image: linear-gradient(to right, 
+	rgba($color-main, 1), 
+	rgba($color-dark, 1));
+    transform: rotateY(180deg);
     }
     }
 	
+
 	&:hover &__side--front{
-    transform: rotateY(180deg);
+    transform: rotateY(-180deg);
     }
 
     &:hover &__side--back{
     transform: rotateY(0);
     }
+}
+
+
+@include device(ipad){
+   .cards{
+   margin: 1rem;
+   }
 }
