--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,7 +2,7 @@
 	background: linear-gradient(
     to right bottom, 
     rgba($color-main, 0.9), 
-    rgba($color-black, 0.9)),
+    rgba($color-dark, 0.9)),
 	url("../images/header-background.jpg") no-repeat 50%/cover;
 	background-attachment: fixed;
     background-position: left;
@@ -18,49 +18,42 @@
     animation: moveInRight 1.5s ease-out;
     color: $color-white;
     font-size: 2rem;
-    padding: 3rem;
+    padding: 2rem;
 	}
     // IMAGES
 	&__image{
-	position: absolute;
-	width: 50%;
-	left: 50%;
-	top: 20vh;
-	transform: translateX(-50%);
-
-    // MIXIN FOR HEADER IMAGE
-
-    @mixin filterImage{
-    padding: 1rem;
+	width: 25%;
     position: absolute;
-    box-shadow: 0 1.5rem 4rem rgba($color-grey, 0.4);
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
     transition: all .2s;
     outline-offset: 2rem;
+
     &:hover{
     outline: 1.5rem solid $color-dark;
-    transform: scale(1.6);
+    transform: scale(1.05);
     z-index: 20;
     }
-    }
 	&--number1{
-    left: 0%;
-    top: -3rem;
-    width: 50%;
-    @include filterImage;
+    left: 17%;
+    top: 18rem;
 	}
 	&--number2{
-	left: 15.5%;
-    top: 4rem;
-    width: 64%;
-	@include filterImage;
+	left: 36%;
+    top: 10rem;
+	}
+	&--number3{
+	left: 53%;
+    top: 20rem;
 	}
 	}
     // TYPO
     &__heading{
+    display: table;
+    padding: 0rem 2rem;
     position: absolute;
-	top: 75vh;
+	top: 67vh;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translateX(-50%);
 	&__primary{
 	display: block;
 	line-height: 1.3;
@@ -74,58 +67,77 @@
 }
 }
 
+// MIXINS
+@include device(ipad-pro){
+	.header{
+	&__heading{
+	top: 64vh;
+	}
+}
+}
 
 
 @include device(tab-landscape){
-	.header__image--number1{
-     width: 52%;
-	}
-	.header__image--number2{
-     width: 72%;
+	.header{
+	&__image{
+	width: 27%;
 	}
 }
-
-@include device(ipad-pro){
-	.header{
-	height: 75vh;
-	clip-path: polygon(0% 0%, 100% 0, 100% 65vh, 0 100%);
-	&__image--number1{
-    width: 75%
-	}
-	&__image--number2{
-    width: 112%;
-	}
-	&__heading{
-	top: 59vh;
-	}
-	}
 }
 
 @include device(ipad){
 	.header{
-	&__image--number1{
-     width: 74%;
-     }
-	&__image--number2{
-     width: 100%;
-	}
-	&__heading{
-	top: 57vh;
-	}
-	}
+	&__image--number3 {
+    left: 54%;
+    top: 18rem;
+    }
+    &__heading{
+    top: 58vh;
+    }
+}
 }
 
 @include device(phone){
 	.header{
-	&__image--number1{
-     width: 86%;
-     left: -5rem;
-     top: -1rem;
-     }
-	&__image--number2{
-     width: 112%;
+	&__image{
+	width: 34%;
 	}
+	&__image--number1 {
+    left: 10%;
+    top: 19rem;
+    }
+    &__image--number2 {
+    left: 31%;
+    top: 10rem;
+    }
+    &__image--number3 {
+    left: 54%;
+    top: 19rem;
+    }
+    &__heading{
+    top: 56vh;
+    }
+}
+}
+
+@include device(xsm-phone){
+	.header{
+	&__image{
+	width: 39%;
 	}
+	&__image--number1 {
+    top: 26rem;
+    }
+    &__image--number2 {
+    top: 19rem;
+    }
+    &__image--number3 {
+    top: 26rem;
+    }
+    &__heading{
+    top: 63vh;
+    }
+}
 }
 
 
