--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -12,8 +12,8 @@
 	margin-top: -3rem;
 	background: linear-gradient(
     to right bottom, 
-    rgba($color-main, 0.9), 
-    rgba($color-white, 0.9)),
+    rgba($color-secondary, 0.9), 
+    rgba($color-dark, 0.9)),
 	url("../images/header-image1.png") no-repeat 50%/cover;
 	background-attachment: fixed;
     background-position: center;
